==> sh-lyf/XenD101_HPS/Middleware/platform/stm32/src/stm32_i2c.c <==
/**
  ******************************************************************************
  * @file    stm32_i2c.c
  * @author  iclm team
  * @brief   i2c services
  ******************************************************************************
  */
#include "stm32_i2c.h"
#include "stm32_misc.h"
#include "utilities.h"

static I2C_HandleTypeDef hi2c;

uint32_t I2C_GetConfigBySpeed(uint8_t I2CSpeed)
{
	uint32_t Config = stm32_I2C_Speed_Config_400k;
	switch(I2CSpeed)
	{
		case I2C_Speed_100k:
		{
			Config = stm32_I2C_Speed_Config_100k;
			break;
		}
		case I2C_Speed_200k:
		{
			Config = stm32_I2C_Speed_Config_200k;
			break;
		}
		case I2C_Speed_300k:
		{
			Config = stm32_I2C_Speed_Config_300k;
			break;
		}
		case I2C_Speed_400k:
		{
			Config = stm32_I2C_Speed_Config_400k;
			break;
		}
		case I2C_Speed_1M:
		{
			Config = stm32_I2C_Speed_Config_1M;
			break;
		}
		default:
		{
			break;
		}
	}
	return Config;
}

HAL_StatusTypeDef I2C_Write(uint16_t devAddr, uint8_t regAddr, uint16_t regVal)
{
    regVal = LE16_TO_BIG(regVal);

    return HAL_I2C_Mem_Write(&hi2c, devAddr, regAddr, I2C_MEMADD_SIZE_8BIT, (uint8_t *)&regVal, sizeof(regVal), I2C_TIMEOUT);
}


HAL_StatusTypeDef I2C_Read(uint16_t devAddr, uint8_t regAddr, uint16_t* regVal)
{  
	uint16_t val = 0;
	uint8_t retryCount = 3;
	HAL_StatusTypeDef result = HAL_OK;
	while(retryCount--)
	{
		result = HAL_I2C_Mem_Read(&hi2c, devAddr, regAddr, I2C_MEMADD_SIZE_8BIT, (uint8_t*)&val,  sizeof(val), I2C_TIMEOUT);
		if( result == HAL_OK)
		{
			break;
		}
		else
		{
			HAL_Delay(1);
		}
	}
	*regVal = BIG16_TO_LE(val);
    return result;
}

void I2C_Init(uint8_t I2CSpeed)
{
	uint32_t ConfigSpeed = I2C_GetConfigBySpeed(I2CSpeed);
    hi2c.Instance = I2Cx;
#if defined(STM32F429xx)
    hi2c.Init.ClockSpeed = ConfigSpeed;
    hi2c.Init.DutyCycle = I2C_DUTYCYCLE_2;
#elif defined(STM32H750xx)
    hi2c.Init.Timing = ConfigSpeed;
#endif
    hi2c.Init.OwnAddress1 = 0;
    hi2c.Init.AddressingMode = I2C_ADDRESSINGMODE_7BIT;
    hi2c.Init.DualAddressMode = I2C_DUALADDRESS_DISABLE;
    hi2c.Init.OwnAddress2 = 0;
    hi2c.Init.GeneralCallMode = I2C_GENERALCALL_DISABLE;
    hi2c.Init.NoStretchMode = I2C_NOSTRETCH_DISABLE;
    if (HAL_I2C_Init(&hi2c) != HAL_OK)
    {
        RunFailed((uint8_t *)__FILE__, __LINE__);
    }

    if (HAL_I2CEx_ConfigAnalogFilter(&hi2c, I2C_ANALOGFILTER_ENABLE) != HAL_OK)
    {
        RunFailed((uint8_t *)__FILE__, __LINE__);
    }

    if (HAL_I2CEx_ConfigDigitalFilter(&hi2c, 0) != HAL_OK)
    {
        RunFailed((uint8_t *)__FILE__, __LINE__);
    }

    CACHE_CleanDCache((uint32_t*)&hi2c, sizeof(hi2c));
}

void HAL_I2C_MspInit(I2C_HandleTypeDef* i2cHandle)
{
    GPIO_InitTypeDef GPIO_InitStruct = {0};
    
    if(i2cHandle->Instance==I2C2)
    {  
        __HAL_RCC_GPIOB_CLK_ENABLE();
        /**I2C2 GPIO Configuration    
        PB10     ------> I2C2_SCL
        PB11     ------> I2C2_SDA 
        */
        GPIO_InitStruct.Pin = GPIO_PIN_10|GPIO_PIN_11;
        GPIO_InitStruct.Mode = GPIO_MODE_AF_OD;
        GPIO_InitStruct.Pull = GPIO_PULLUP;
        GPIO_InitStruct.Speed = GPIO_SPEED_FREQ_VERY_HIGH;
        GPIO_InitStruct.Alternate = GPIO_AF4_I2C2;
        HAL_GPIO_Init(GPIOB, &GPIO_InitStruct);

        __HAL_RCC_I2C2_CLK_ENABLE();
    }

#if defined(STM32H750xx)
    if(i2cHandle->Instance==I2C4)
    {  
        __HAL_RCC_GPIOB_CLK_ENABLE();
        /**I2C4 GPIO Configuration    
        PB8     ------> I2C4_SCL
        PB9     ------> I2C4_SDA 
        */
        GPIO_InitStruct.Pin = GPIO_PIN_8|GPIO_PIN_9;
        GPIO_InitStruct.Mode = GPIO_MODE_AF_OD;
        GPIO_InitStruct.Pull = GPIO_PULLUP;
        GPIO_InitStruct.Speed = GPIO_SPEED_FREQ_VERY_HIGH;
        GPIO_InitStruct.Alternate = GPIO_AF6_I2C4;
        HAL_GPIO_Init(GPIOB, &GPIO_InitStruct);

        __HAL_RCC_I2C4_CLK_ENABLE();
    }
#endif
}

void HAL_I2C_MspDeInit(I2C_HandleTypeDef* i2cHandle)
{
    if(i2cHandle->Instance==I2C2)
    {
        __HAL_RCC_I2C2_CLK_DISABLE();
        HAL_GPIO_DeInit(GPIOB, GPIO_PIN_10|GPIO_PIN_11);
    }
    
#if defined(STM32H750xx)
    if(i2cHandle->Instance==I2C4)
    {
        __HAL_RCC_I2C4_CLK_DISABLE();
        HAL_GPIO_DeInit(GPIOB, GPIO_PIN_8|GPIO_PIN_9);
    }
#endif
} 

void I2C_ResetSpeed(uint8_t I2CSpeed)
{
	HAL_I2C_DeInit(&hi2c);
	I2C_Init(I2CSpeed);
}
